<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_background"
    tools:context=".StoreActivity">

    <Button
        android:id="@+id/buyCardBacksBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/buy_card_backs_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/backToGameBtn"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/buyPremiumBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:text="@string/buy_premium_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buyPointsBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="145.2dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/buyCardBacksBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b3" />

    <Button
        android:id="@+id/backToGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/back_to_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buyPointsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_points_button"
        app:layout_constraintBottom_toTopOf="@+id/buyPremiumBtn"
        app:layout_constraintStart_toStartOf="@+id/buyCardBacksBtn"
        app:layout_constraintTop_toBottomOf="@+id/buyCardBacksBtn" />

    <TextView
        android:id="@+id/buyPointsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_points_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/buyPointsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buyPointsBtn"
        app:layout_constraintTop_toTopOf="@+id/buyPointsBtn"
        app:layout_constraintVertical_bias="0.562" />


</androidx.constraintlayout.widget.ConstraintLayout>